tests/NormalTests/paczka2/big_fuzzy/16961835.err
Error in line 1: Lfw3 S886 92,8
Error in line 5: eKqrFHxqkHw A263 -1,3
Error in line 10: A263 S640 79,4
Error in line 17: A263 A28 1,3
Error in line 7: Lfw3 A263 190,5
Error in line 2: vcDq8er98 S886 80,7
Error in line 15: eKqrFHxqkHw A263 93,0
Error in line 27: eKqrFHxqkHw S640 86,2
Error in line 52: kVr1 S640 -2,6
Error in line 38: eKqrFHxqkHw A28 33,0
Error in line 49: A263 S640 37,1
Error in line 54: A263 S886 23,9
Error in line 55: A263 A28 85,1
Error in line 53: eKqrFHxqkHw S640 1,6
Error in line 56: i9euUV6 S640 56,2
Error in line 44: vcDq8er98 S640 96,8
Error in line 72: eKqrFHxqkHw A28 38,5
Error in line 91: Si00OWu S640 75,0
Error in line 70: vcDq8er98 A263 38,2
Error in line 79: eKqrFHxqkHw S640 33,8
Error in line 95: eKqrFHxqkHw A28 11,0
Error in line 107: Lfw3 S640 78,91
Error in line 108: Lfw3 A263 53,1
Error in line 101: eKqrFHxqkHw S640 49,4
Error in line 116: kVr1 A263 71,7
Error in line 130: vcDq8er98 A28 49,8
Error in line 141: Lfw3 S640 45,1
Error in line 135: vcDq8er98 S640 52,1
Error in line 155: eKqrFHxqkHw A28 85,6
Error in line 153: vcDq8er98 A263 42,7
Error in line 165: eKqrFHxqkHw A263 -1,3
Error in line 148: i9euUV6 A263 21,0
Error in line 163: Si00OWu A28 322,5
Error in line 157: A263 A28 87,3
Error in line 171: Lfw3 S886 7,¾
Error in line 175: vcDq8er98 S886 22,65
Error in line 180: i9euUV6 A263 36,6
Error in line 187: i9euUV6 A28 24,5
Error in line 199: Lfw3 S640 40,5
Error in line 205: vcDq8er98 S886 90,4
Error in line 214: i9euUV6 A28 -2,3
Error in line 203: i9euUV6 A28 41,6
Error in line 215: i9euUV6 A263 61,2
Error in line 216: i9euUV6 A28 78,1
Error in line 217: A263 S640 93,0
Error in line 229: eKqrFHxqkHw S640 71,9
Error in line 224: kVr1 S886 52,3
Error in line 230: eKqrFHxqkHw A263 33,6
Error in line 232: kVr1 S640 32,5
Error in line 235: vcDq8er98 A263 72,4
Error in line 234: eKqrFHxqkHw A28 48,0
